versions/0.22.0/_sources/refs/_aws-cdk_aws-dynamodb.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"6YgicUKiMgQGp6QJb2WzhV7A1lp0X5aSH+/5RV5Lwss="}

@aws-cdk/aws-dynamodb
=====================

.. mdinclude:: ./__aws-cdk_aws-dynamodb.README.md

Reference
---------

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.DynamoDB/0.22.0>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.DynamoDB" Version="0.22.0" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.DynamoDB --version 0.22.0

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.DynamoDB" version="0.22.0" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/dynamodb/0.22.0/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:dynamodb:jar:0.22.0'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="dynamodb" rev="0.22.0"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>dynamodb</artifactId>
           <version>0.22.0</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:dynamodb:0.22.0'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='dynamodb', version='0.22.0')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-dynamodb/v/0.22.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-dynamodb@0.22.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-dynamodb": "^0.22.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-dynamodb@0.22.0


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-dynamodb/v/0.22.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-dynamodb@0.22.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-dynamodb": "^0.22.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-dynamodb@0.22.0



.. py:module:: @aws-cdk/aws-dynamodb

Attribute (interface)
^^^^^^^^^^^^^^^^^^^^^

.. py:class:: Attribute

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.DynamoDB;

      .. code-tab:: java

         import software.amazon.awscdk.services.dynamodb.Attribute;

      .. code-tab:: javascript

         // Attribute is an interface

      .. code-tab:: typescript

         import { Attribute } from '@aws-cdk/aws-dynamodb';





   .. py:attribute:: name

      The name of an attribute.



      :type: string


   .. py:attribute:: type

      The data type of an attribute.



      :type: :py:class:`~@aws-cdk/aws-dynamodb.AttributeType`\ 


AttributeType (enum)
^^^^^^^^^^^^^^^^^^^^

.. py:class:: AttributeType

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.DynamoDB;

      .. code-tab:: java

         import software.amazon.awscdk.services.dynamodb.AttributeType;

      .. code-tab:: javascript

         const { AttributeType } = require('@aws-cdk/aws-dynamodb');

      .. code-tab:: typescript

         import { AttributeType } from '@aws-cdk/aws-dynamodb';



   .. py:data:: Binary

   .. py:data:: Number

   .. py:data:: String


BillingMode (enum)
^^^^^^^^^^^^^^^^^^

.. py:class:: BillingMode

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.DynamoDB;

      .. code-tab:: java

         import software.amazon.awscdk.services.dynamodb.BillingMode;

      .. code-tab:: javascript

         const { BillingMode } = require('@aws-cdk/aws-dynamodb');

      .. code-tab:: typescript

         import { BillingMode } from '@aws-cdk/aws-dynamodb';



   DyanmoDB's Read/Write capacity modes.



   .. py:data:: PayPerRequest

   Pay only for what you use. You don't configure Read/Write capacity units.



   .. py:data:: Provisioned

   Explicitly specified Read/Write capacity units.




CfnTable
^^^^^^^^

.. py:class:: CfnTable(scope, id, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.DynamoDB;

      .. code-tab:: java

         import software.amazon.awscdk.services.dynamodb.CfnTable;

      .. code-tab:: javascript

         const { CfnTable } = require('@aws-cdk/aws-dynamodb');

      .. code-tab:: typescript

         import { CfnTable } from '@aws-cdk/aws-dynamodb';



   :extends: :py:class:`@aws-cdk/cdk.Resource`\ 
   :param scope: scope in which this resource is defined
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: scoped id of the resource
   :type id: string
   :param props: resource properties
   :type props: :py:class:`~@aws-cdk/aws-dynamodb.CfnTableProps`\ 

   .. py:method:: renderProperties(properties) -> string => any

      *Overrides* :py:meth:`@aws-cdk/cdk.Resource.renderProperties`

      *Protected method*

      :param properties: 
      :type properties: any
      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.



      :type: string *(readonly)* *(static)*


   .. py:attribute:: propertyOverrides

      :type: :py:class:`~@aws-cdk/aws-dynamodb.CfnTableProps`\  *(readonly)*


   .. py:attribute:: tableArn

      :type: string *(readonly)*


   .. py:attribute:: tableName

      :type: string *(readonly)*


   .. py:attribute:: tableStreamArn

      :type: string *(readonly)*

   .. py:class:: AttributeDefinitionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.DynamoDB;

         .. code-tab:: java

            import software.amazon.awscdk.services.dynamodb.CfnTable.AttributeDefinitionProperty;

         .. code-tab:: javascript

            // CfnTable.AttributeDefinitionProperty is an interface

         .. code-tab:: typescript

            import { CfnTable.AttributeDefinitionProperty } from '@aws-cdk/aws-dynamodb';





      .. py:attribute:: attributeName

         ``CfnTable.AttributeDefinitionProperty.AttributeName``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-attributedef.html#cfn-dynamodb-attributedef-attributename


         :type: string


      .. py:attribute:: attributeType

         ``CfnTable.AttributeDefinitionProperty.AttributeType``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-attributedef.html#cfn-dynamodb-attributedef-attributename-attributetype


         :type: string


   .. py:class:: GlobalSecondaryIndexProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.DynamoDB;

         .. code-tab:: java

            import software.amazon.awscdk.services.dynamodb.CfnTable.GlobalSecondaryIndexProperty;

         .. code-tab:: javascript

            // CfnTable.GlobalSecondaryIndexProperty is an interface

         .. code-tab:: typescript

            import { CfnTable.GlobalSecondaryIndexProperty } from '@aws-cdk/aws-dynamodb';





      .. py:attribute:: indexName

         ``CfnTable.GlobalSecondaryIndexProperty.IndexName``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-gsi.html#cfn-dynamodb-gsi-indexname


         :type: string


      .. py:attribute:: keySchema

         ``CfnTable.GlobalSecondaryIndexProperty.KeySchema``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-gsi.html#cfn-dynamodb-gsi-keyschema


         :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`~@aws-cdk/aws-dynamodb.CfnTable.KeySchemaProperty`\  or :py:class:`@aws-cdk/cdk.Token`\ )[]


      .. py:attribute:: projection

         ``CfnTable.GlobalSecondaryIndexProperty.Projection``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-gsi.html#cfn-dynamodb-gsi-projection


         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-dynamodb.CfnTable.ProjectionProperty`\ 


      .. py:attribute:: provisionedThroughput

         ``CfnTable.GlobalSecondaryIndexProperty.ProvisionedThroughput``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-gsi.html#cfn-dynamodb-gsi-provisionedthroughput


         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-dynamodb.CfnTable.ProvisionedThroughputProperty`\  *(optional)*


   .. py:class:: KeySchemaProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.DynamoDB;

         .. code-tab:: java

            import software.amazon.awscdk.services.dynamodb.CfnTable.KeySchemaProperty;

         .. code-tab:: javascript

            // CfnTable.KeySchemaProperty is an interface

         .. code-tab:: typescript

            import { CfnTable.KeySchemaProperty } from '@aws-cdk/aws-dynamodb';





      .. py:attribute:: attributeName

         ``CfnTable.KeySchemaProperty.AttributeName``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-keyschema.html#aws-properties-dynamodb-keyschema-attributename


         :type: string


      .. py:attribute:: keyType

         ``CfnTable.KeySchemaProperty.KeyType``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-keyschema.html#aws-properties-dynamodb-keyschema-keytype


         :type: string


   .. py:class:: LocalSecondaryIndexProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.DynamoDB;

         .. code-tab:: java

            import software.amazon.awscdk.services.dynamodb.CfnTable.LocalSecondaryIndexProperty;

         .. code-tab:: javascript

            // CfnTable.LocalSecondaryIndexProperty is an interface

         .. code-tab:: typescript

            import { CfnTable.LocalSecondaryIndexProperty } from '@aws-cdk/aws-dynamodb';





      .. py:attribute:: indexName

         ``CfnTable.LocalSecondaryIndexProperty.IndexName``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-lsi.html#cfn-dynamodb-lsi-indexname


         :type: string


      .. py:attribute:: keySchema

         ``CfnTable.LocalSecondaryIndexProperty.KeySchema``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-lsi.html#cfn-dynamodb-lsi-keyschema


         :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`~@aws-cdk/aws-dynamodb.CfnTable.KeySchemaProperty`\  or :py:class:`@aws-cdk/cdk.Token`\ )[]


      .. py:attribute:: projection

         ``CfnTable.LocalSecondaryIndexProperty.Projection``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-lsi.html#cfn-dynamodb-lsi-projection


         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-dynamodb.CfnTable.ProjectionProperty`\ 


   .. py:class:: PointInTimeRecoverySpecificationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.DynamoDB;

         .. code-tab:: java

            import software.amazon.awscdk.services.dynamodb.CfnTable.PointInTimeRecoverySpecificationProperty;

         .. code-tab:: javascript

            // CfnTable.PointInTimeRecoverySpecificationProperty is an interface

         .. code-tab:: typescript

            import { CfnTable.PointInTimeRecoverySpecificationProperty } from '@aws-cdk/aws-dynamodb';





      .. py:attribute:: pointInTimeRecoveryEnabled

         ``CfnTable.PointInTimeRecoverySpecificationProperty.PointInTimeRecoveryEnabled``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-table-pointintimerecoveryspecification.html#cfn-dynamodb-table-pointintimerecoveryspecification-pointintimerecoveryenabled


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


   .. py:class:: ProjectionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.DynamoDB;

         .. code-tab:: java

            import software.amazon.awscdk.services.dynamodb.CfnTable.ProjectionProperty;

         .. code-tab:: javascript

            // CfnTable.ProjectionProperty is an interface

         .. code-tab:: typescript

            import { CfnTable.ProjectionProperty } from '@aws-cdk/aws-dynamodb';





      .. py:attribute:: nonKeyAttributes

         ``CfnTable.ProjectionProperty.NonKeyAttributes``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-projectionobject.html#cfn-dynamodb-projectionobj-nonkeyatt


         :type: :py:class:`@aws-cdk/cdk.Token`\  or (string or :py:class:`@aws-cdk/cdk.Token`\ )[] *(optional)*


      .. py:attribute:: projectionType

         ``CfnTable.ProjectionProperty.ProjectionType``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-projectionobject.html#cfn-dynamodb-projectionobj-projtype


         :type: string *(optional)*


   .. py:class:: ProvisionedThroughputProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.DynamoDB;

         .. code-tab:: java

            import software.amazon.awscdk.services.dynamodb.CfnTable.ProvisionedThroughputProperty;

         .. code-tab:: javascript

            // CfnTable.ProvisionedThroughputProperty is an interface

         .. code-tab:: typescript

            import { CfnTable.ProvisionedThroughputProperty } from '@aws-cdk/aws-dynamodb';





      .. py:attribute:: readCapacityUnits

         ``CfnTable.ProvisionedThroughputProperty.ReadCapacityUnits``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-provisionedthroughput.html#cfn-dynamodb-provisionedthroughput-readcapacityunits


         :type: number or :py:class:`@aws-cdk/cdk.Token`\ 


      .. py:attribute:: writeCapacityUnits

         ``CfnTable.ProvisionedThroughputProperty.WriteCapacityUnits``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-provisionedthroughput.html#cfn-dynamodb-provisionedthroughput-writecapacityunits


         :type: number or :py:class:`@aws-cdk/cdk.Token`\ 


   .. py:class:: SSESpecificationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.DynamoDB;

         .. code-tab:: java

            import software.amazon.awscdk.services.dynamodb.CfnTable.SSESpecificationProperty;

         .. code-tab:: javascript

            // CfnTable.SSESpecificationProperty is an interface

         .. code-tab:: typescript

            import { CfnTable.SSESpecificationProperty } from '@aws-cdk/aws-dynamodb';





      .. py:attribute:: sseEnabled

         ``CfnTable.SSESpecificationProperty.SSEEnabled``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-table-ssespecification.html#cfn-dynamodb-table-ssespecification-sseenabled


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\ 


   .. py:class:: StreamSpecificationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.DynamoDB;

         .. code-tab:: java

            import software.amazon.awscdk.services.dynamodb.CfnTable.StreamSpecificationProperty;

         .. code-tab:: javascript

            // CfnTable.StreamSpecificationProperty is an interface

         .. code-tab:: typescript

            import { CfnTable.StreamSpecificationProperty } from '@aws-cdk/aws-dynamodb';





      .. py:attribute:: streamViewType

         ``CfnTable.StreamSpecificationProperty.StreamViewType``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-streamspecification.html#cfn-dynamodb-streamspecification-streamviewtype


         :type: string


   .. py:class:: TimeToLiveSpecificationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.DynamoDB;

         .. code-tab:: java

            import software.amazon.awscdk.services.dynamodb.CfnTable.TimeToLiveSpecificationProperty;

         .. code-tab:: javascript

            // CfnTable.TimeToLiveSpecificationProperty is an interface

         .. code-tab:: typescript

            import { CfnTable.TimeToLiveSpecificationProperty } from '@aws-cdk/aws-dynamodb';





      .. py:attribute:: attributeName

         ``CfnTable.TimeToLiveSpecificationProperty.AttributeName``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-timetolivespecification.html#cfn-dynamodb-timetolivespecification-attributename


         :type: string


      .. py:attribute:: enabled

         ``CfnTable.TimeToLiveSpecificationProperty.Enabled``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-dynamodb-timetolivespecification.html#cfn-dynamodb-timetolivespecification-enabled


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\ 



   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


   .. py:attribute:: ref

      *Inherited from* :py:attr:`@aws-cdk/cdk.Referenceable <@aws-cdk/cdk.Referenceable.ref>`

      Returns a token to a CloudFormation { Ref } that references this entity based on it's logical ID.



      :type: string *(readonly)*


   .. py:method:: addDeletionOverride(path)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDeletionOverride>`

      Syntactic sugar for `addOverride(path, undefined)`.



      :param path: The path of the value to delete
      :type path: string


   .. py:method:: addDependency(*other)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDependency>`

      Adds a dependency on another resource.



      :param \*other: The other resource.
      :type \*other: :py:class:`@aws-cdk/cdk.IDependable`\ 


   .. py:method:: addOverride(path, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addOverride>`

      Adds an override to the synthesized CloudFormation resource. To add a

      property override, either use `addPropertyOverride` or prefix `path` with

      "Properties." (i.e. `Properties.TopicName`).



      :param path: The path of the property, you can use dot notation to override values in complex types. Any intermdediate keys will be created as needed.
      :type path: string
      :param value: The value. Could be primitive or complex.
      :type value: any


   .. py:method:: addPropertyDeletionOverride(propertyPath)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyDeletionOverride>`

      Adds an override that deletes the value of a property from the resource definition.



      :param propertyPath: The path to the property.
      :type propertyPath: string


   .. py:method:: addPropertyOverride(propertyPath, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyOverride>`

      Adds an override to a resource property.

      

      Syntactic sugar for `addOverride("Properties.<...>", value)`.



      :param propertyPath: The path of the property
      :type propertyPath: string
      :param value: The value
      :type value: any


   .. py:method:: getAtt(attributeName) -> @aws-cdk/cdk.CfnReference

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.getAtt>`

      Returns a token for an runtime attribute of this resource.

      Ideally, use generated attribute accessors (e.g. `resource.arn`), but this can be used for future compatibility

      in case there is no generated attribute.



      :param attributeName: The name of the attribute.
      :type attributeName: string
      :rtype: :py:class:`@aws-cdk/cdk.CfnReference`\ 


   .. py:method:: toCloudFormation() -> json

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.toCloudFormation>`

      Emits CloudFormation for this resource.



      :rtype: json


   .. py:attribute:: options

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.options>`

      Options for this resource, such as condition, update policy etc.



      :type: :py:class:`@aws-cdk/cdk.ResourceOptions`\  *(readonly)*


   .. py:attribute:: properties

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.properties>`

      AWS resource properties.

      

      This object is rendered via a call to "renderProperties(this.properties)".



      *Protected property*

      :type: any *(readonly)*


   .. py:attribute:: resourceType

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.resourceType>`

      AWS resource type.



      :type: string *(readonly)*


   .. py:attribute:: untypedPropertyOverrides

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.untypedPropertyOverrides>`

      AWS resource property overrides.

      

      During synthesis, the method "renderProperties(this.overrides)" is called

      with this object, and merged on top of the output of

      "renderProperties(this.properties)".

      

      Derived classes should expose a strongly-typed version of this object as

      a public property called `propertyOverrides`.



      *Protected property*

      :type: any *(readonly)*


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.prepare>`

      Automatically detect references in this StackElement



      *Protected method*



   .. py:attribute:: creationStackTrace

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.creationStackTrace>`

      :type: string[] *(readonly)*


   .. py:attribute:: dependencyElements

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.dependencyElements>`

      Returns the set of all stack elements (resources, parameters, conditions)

      that should be added when a resource "depends on" this construct.



      :type: :py:class:`@aws-cdk/cdk.IDependable`\ [] *(readonly)*


   .. py:attribute:: logicalId

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.logicalId>`

      The logical ID for this CloudFormation stack element



      :type: string *(readonly)*


   .. py:attribute:: stackPath

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stackPath>`

      Return the path with respect to the stack



      :type: string *(readonly)*


   .. py:attribute:: stack

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stack>`

      The stack this Construct has been made a part of



      *Protected property*

      :type: :py:class:`@aws-cdk/cdk.Stack`\ 


CfnTableProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnTableProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.DynamoDB;

      .. code-tab:: java

         import software.amazon.awscdk.services.dynamodb.CfnTableProps;

      .. code-tab:: javascript

         // CfnTableProps is an interface

      .. code-tab:: typescript

         import { CfnTableProps } from '@aws-cdk/aws-dynamodb';





   .. py:attribute:: keySchema

      ``AWS::DynamoDB::Table.KeySchema``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dynamodb-table.html#cfn-dynamodb-table-keyschema


      :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`~@aws-cdk/aws-dynamodb.CfnTable.KeySchemaProperty`\  or :py:class:`@aws-cdk/cdk.Token`\ )[]


   .. py:attribute:: attributeDefinitions

      ``AWS::DynamoDB::Table.AttributeDefinitions``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dynamodb-table.html#cfn-dynamodb-table-attributedef


      :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-dynamodb.CfnTable.AttributeDefinitionProperty`\ )[] *(optional)*


   .. py:attribute:: billingMode

      ``AWS::DynamoDB::Table.BillingMode``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dynamodb-table.html#cfn-dynamodb-table-billingmode


      :type: string *(optional)*


   .. py:attribute:: globalSecondaryIndexes

      ``AWS::DynamoDB::Table.GlobalSecondaryIndexes``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dynamodb-table.html#cfn-dynamodb-table-gsi


      :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-dynamodb.CfnTable.GlobalSecondaryIndexProperty`\ )[] *(optional)*


   .. py:attribute:: localSecondaryIndexes

      ``AWS::DynamoDB::Table.LocalSecondaryIndexes``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dynamodb-table.html#cfn-dynamodb-table-lsi


      :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-dynamodb.CfnTable.LocalSecondaryIndexProperty`\ )[] *(optional)*


   .. py:attribute:: pointInTimeRecoverySpecification

      ``AWS::DynamoDB::Table.PointInTimeRecoverySpecification``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dynamodb-table.html#cfn-dynamodb-table-pointintimerecoveryspecification


      :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-dynamodb.CfnTable.PointInTimeRecoverySpecificationProperty`\  *(optional)*


   .. py:attribute:: provisionedThroughput

      ``AWS::DynamoDB::Table.ProvisionedThroughput``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dynamodb-table.html#cfn-dynamodb-table-provisionedthroughput


      :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-dynamodb.CfnTable.ProvisionedThroughputProperty`\  *(optional)*


   .. py:attribute:: sseSpecification

      ``AWS::DynamoDB::Table.SSESpecification``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dynamodb-table.html#cfn-dynamodb-table-ssespecification


      :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-dynamodb.CfnTable.SSESpecificationProperty`\  *(optional)*


   .. py:attribute:: streamSpecification

      ``AWS::DynamoDB::Table.StreamSpecification``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dynamodb-table.html#cfn-dynamodb-table-streamspecification


      :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-dynamodb.CfnTable.StreamSpecificationProperty`\  *(optional)*


   .. py:attribute:: tableName

      ``AWS::DynamoDB::Table.TableName``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dynamodb-table.html#cfn-dynamodb-table-tablename


      :type: string *(optional)*


   .. py:attribute:: tags

      ``AWS::DynamoDB::Table.Tags``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dynamodb-table.html#cfn-dynamodb-table-tags


      :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`@aws-cdk/cdk.Tag`\ )[] *(optional)*


   .. py:attribute:: timeToLiveSpecification

      ``AWS::DynamoDB::Table.TimeToLiveSpecification``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dynamodb-table.html#cfn-dynamodb-table-timetolivespecification


      :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-dynamodb.CfnTable.TimeToLiveSpecificationProperty`\  *(optional)*


EnableScalingProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: EnableScalingProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.DynamoDB;

      .. code-tab:: java

         import software.amazon.awscdk.services.dynamodb.EnableScalingProps;

      .. code-tab:: javascript

         // EnableScalingProps is an interface

      .. code-tab:: typescript

         import { EnableScalingProps } from '@aws-cdk/aws-dynamodb';



   Properties for enabling DynamoDB capacity scaling





   .. py:attribute:: maxCapacity

      Maximum capacity to scale to



      :type: number


   .. py:attribute:: minCapacity

      Minimum capacity to scale to



      :type: number


GlobalSecondaryIndexProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: GlobalSecondaryIndexProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.DynamoDB;

      .. code-tab:: java

         import software.amazon.awscdk.services.dynamodb.GlobalSecondaryIndexProps;

      .. code-tab:: javascript

         // GlobalSecondaryIndexProps is an interface

      .. code-tab:: typescript

         import { GlobalSecondaryIndexProps } from '@aws-cdk/aws-dynamodb';



   :extends: :py:class:`~@aws-cdk/aws-dynamodb.SecondaryIndexProps`\ 


   .. py:attribute:: partitionKey

      The attribute of a partition key for the global secondary index.



      :type: :py:class:`~@aws-cdk/aws-dynamodb.Attribute`\ 


   .. py:attribute:: readCapacity

      The read capacity for the global secondary index.

      

      Can only be provided if table billingMode is Provisioned or undefined.



      :type: number *(optional)*
      :default: 5


   .. py:attribute:: sortKey

      The attribute of a sort key for the global secondary index.



      :type: :py:class:`~@aws-cdk/aws-dynamodb.Attribute`\  *(optional)*
      :default: undefined


   .. py:attribute:: writeCapacity

      The write capacity for the global secondary index.

      

      Can only be provided if table billingMode is Provisioned or undefined.



      :type: number *(optional)*
      :default: 5


   .. py:attribute:: indexName

      *Inherited from* :py:attr:`@aws-cdk/aws-dynamodb.SecondaryIndexProps <@aws-cdk/aws-dynamodb.SecondaryIndexProps.indexName>`

      The name of the secondary index.



      :type: string


   .. py:attribute:: nonKeyAttributes

      *Inherited from* :py:attr:`@aws-cdk/aws-dynamodb.SecondaryIndexProps <@aws-cdk/aws-dynamodb.SecondaryIndexProps.nonKeyAttributes>`

      The non-key attributes that are projected into the secondary index.



      :type: string[] *(optional)*
      :default: undefined


   .. py:attribute:: projectionType

      *Inherited from* :py:attr:`@aws-cdk/aws-dynamodb.SecondaryIndexProps <@aws-cdk/aws-dynamodb.SecondaryIndexProps.projectionType>`

      The set of attributes that are projected into the secondary index.



      :type: :py:class:`~@aws-cdk/aws-dynamodb.ProjectionType`\  *(optional)*
      :default: ALL


IScalableTableAttribute (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: IScalableTableAttribute

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.DynamoDB;

      .. code-tab:: java

         import software.amazon.awscdk.services.dynamodb.IScalableTableAttribute;

      .. code-tab:: javascript

         // IScalableTableAttribute is an interface

      .. code-tab:: typescript

         import { IScalableTableAttribute } from '@aws-cdk/aws-dynamodb';



   Interface for scalable attributes





   .. py:method:: scaleOnSchedule(id, actions)

      Add scheduled scaling for this scaling attribute



      :param id: 
      :type id: string
      :param actions: 
      :type actions: :py:class:`@aws-cdk/aws-applicationautoscaling.ScalingSchedule`\ 
      :abstract: Yes


   .. py:method:: scaleOnUtilization(props)

      Scale out or in to keep utilization at a given level



      :param props: 
      :type props: :py:class:`~@aws-cdk/aws-dynamodb.UtilizationScalingProps`\ 
      :abstract: Yes


LocalSecondaryIndexProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: LocalSecondaryIndexProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.DynamoDB;

      .. code-tab:: java

         import software.amazon.awscdk.services.dynamodb.LocalSecondaryIndexProps;

      .. code-tab:: javascript

         // LocalSecondaryIndexProps is an interface

      .. code-tab:: typescript

         import { LocalSecondaryIndexProps } from '@aws-cdk/aws-dynamodb';



   :extends: :py:class:`~@aws-cdk/aws-dynamodb.SecondaryIndexProps`\ 


   .. py:attribute:: sortKey

      The attribute of a sort key for the local secondary index.



      :type: :py:class:`~@aws-cdk/aws-dynamodb.Attribute`\ 


   .. py:attribute:: indexName

      *Inherited from* :py:attr:`@aws-cdk/aws-dynamodb.SecondaryIndexProps <@aws-cdk/aws-dynamodb.SecondaryIndexProps.indexName>`

      The name of the secondary index.



      :type: string


   .. py:attribute:: nonKeyAttributes

      *Inherited from* :py:attr:`@aws-cdk/aws-dynamodb.SecondaryIndexProps <@aws-cdk/aws-dynamodb.SecondaryIndexProps.nonKeyAttributes>`

      The non-key attributes that are projected into the secondary index.



      :type: string[] *(optional)*
      :default: undefined


   .. py:attribute:: projectionType

      *Inherited from* :py:attr:`@aws-cdk/aws-dynamodb.SecondaryIndexProps <@aws-cdk/aws-dynamodb.SecondaryIndexProps.projectionType>`

      The set of attributes that are projected into the secondary index.



      :type: :py:class:`~@aws-cdk/aws-dynamodb.ProjectionType`\  *(optional)*
      :default: ALL


ProjectionType (enum)
^^^^^^^^^^^^^^^^^^^^^

.. py:class:: ProjectionType

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.DynamoDB;

      .. code-tab:: java

         import software.amazon.awscdk.services.dynamodb.ProjectionType;

      .. code-tab:: javascript

         const { ProjectionType } = require('@aws-cdk/aws-dynamodb');

      .. code-tab:: typescript

         import { ProjectionType } from '@aws-cdk/aws-dynamodb';



   .. py:data:: KeysOnly

   .. py:data:: Include

   .. py:data:: All


SecondaryIndexProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: SecondaryIndexProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.DynamoDB;

      .. code-tab:: java

         import software.amazon.awscdk.services.dynamodb.SecondaryIndexProps;

      .. code-tab:: javascript

         // SecondaryIndexProps is an interface

      .. code-tab:: typescript

         import { SecondaryIndexProps } from '@aws-cdk/aws-dynamodb';





   .. py:attribute:: indexName

      The name of the secondary index.



      :type: string


   .. py:attribute:: nonKeyAttributes

      The non-key attributes that are projected into the secondary index.



      :type: string[] *(optional)*
      :default: undefined


   .. py:attribute:: projectionType

      The set of attributes that are projected into the secondary index.



      :type: :py:class:`~@aws-cdk/aws-dynamodb.ProjectionType`\  *(optional)*
      :default: ALL


StreamViewType (enum)
^^^^^^^^^^^^^^^^^^^^^

.. py:class:: StreamViewType

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.DynamoDB;

      .. code-tab:: java

         import software.amazon.awscdk.services.dynamodb.StreamViewType;

      .. code-tab:: javascript

         const { StreamViewType } = require('@aws-cdk/aws-dynamodb');

      .. code-tab:: typescript

         import { StreamViewType } from '@aws-cdk/aws-dynamodb';



   When an item in the table is modified, StreamViewType determines what information

   is written to the stream for this table. Valid values for StreamViewType are:

   https://docs.aws.amazon.com/amazondynamodb/latest/APIReference/API_StreamSpecification.html


   .. py:data:: NewImage

   The entire item, as it appears after it was modified, is written to the stream.



   .. py:data:: OldImage

   The entire item, as it appeared before it was modified, is written to the stream.



   .. py:data:: NewAndOldImages

   Both the new and the old item images of the item are written to the stream.



   .. py:data:: KeysOnly

   Only the key attributes of the modified item are written to the stream.




Table
^^^^^

.. py:class:: Table(scope, id, [props])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.DynamoDB;

      .. code-tab:: java

         import software.amazon.awscdk.services.dynamodb.Table;

      .. code-tab:: javascript

         const { Table } = require('@aws-cdk/aws-dynamodb');

      .. code-tab:: typescript

         import { Table } from '@aws-cdk/aws-dynamodb';



   Provides a DynamoDB table.



   :extends: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param scope: 
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: 
   :type id: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-dynamodb.TableProps`\  *(optional)*

   .. py:method:: addGlobalSecondaryIndex(props)

      Add a global secondary index of table.



      :param props: the property of global secondary index
      :type props: :py:class:`~@aws-cdk/aws-dynamodb.GlobalSecondaryIndexProps`\ 


   .. py:method:: addLocalSecondaryIndex(props)

      Add a local secondary index of table.



      :param props: the property of local secondary index
      :type props: :py:class:`~@aws-cdk/aws-dynamodb.LocalSecondaryIndexProps`\ 


   .. py:method:: addPartitionKey(attribute) -> @aws-cdk/aws-dynamodb.Table

      Add a partition key of table.



      :param attribute: the partition key attribute of table
      :type attribute: :py:class:`~@aws-cdk/aws-dynamodb.Attribute`\ 
      :return: a reference to this object so that method calls can be chained together
      :rtype: :py:class:`~@aws-cdk/aws-dynamodb.Table`\ 


   .. py:method:: addSortKey(attribute) -> @aws-cdk/aws-dynamodb.Table

      Add a sort key of table.



      :param attribute: the sort key of table
      :type attribute: :py:class:`~@aws-cdk/aws-dynamodb.Attribute`\ 
      :return: a reference to this object so that method calls can be chained together
      :rtype: :py:class:`~@aws-cdk/aws-dynamodb.Table`\ 


   .. py:method:: autoScaleGlobalSecondaryIndexReadCapacity(indexName, props) -> @aws-cdk/aws-dynamodb.IScalableTableAttribute

      Enable read capacity scaling for the given GSI



      :param indexName: 
      :type indexName: string
      :param props: 
      :type props: :py:class:`~@aws-cdk/aws-dynamodb.EnableScalingProps`\ 
      :return: An object to configure additional AutoScaling settings for this attribute
      :rtype: :py:class:`~@aws-cdk/aws-dynamodb.IScalableTableAttribute`\ 


   .. py:method:: autoScaleGlobalSecondaryIndexWriteCapacity(indexName, props) -> @aws-cdk/aws-dynamodb.IScalableTableAttribute

      Enable write capacity scaling for the given GSI



      :param indexName: 
      :type indexName: string
      :param props: 
      :type props: :py:class:`~@aws-cdk/aws-dynamodb.EnableScalingProps`\ 
      :return: An object to configure additional AutoScaling settings for this attribute
      :rtype: :py:class:`~@aws-cdk/aws-dynamodb.IScalableTableAttribute`\ 


   .. py:method:: autoScaleReadCapacity(props) -> @aws-cdk/aws-dynamodb.IScalableTableAttribute

      Enable read capacity scaling for this table



      :param props: 
      :type props: :py:class:`~@aws-cdk/aws-dynamodb.EnableScalingProps`\ 
      :return: An object to configure additional AutoScaling settings
      :rtype: :py:class:`~@aws-cdk/aws-dynamodb.IScalableTableAttribute`\ 


   .. py:method:: autoScaleWriteCapacity(props) -> @aws-cdk/aws-dynamodb.IScalableTableAttribute

      Enable write capacity scaling for this table



      :param props: 
      :type props: :py:class:`~@aws-cdk/aws-dynamodb.EnableScalingProps`\ 
      :return: An object to configure additional AutoScaling settings for this attribute
      :rtype: :py:class:`~@aws-cdk/aws-dynamodb.IScalableTableAttribute`\ 


   .. py:method:: grant(principal, *actions)

      Adds an IAM policy statement associated with this table to an IAM

      principal's policy.



      :param principal: The principal (no-op if undefined)
      :type principal: :py:class:`@aws-cdk/aws-iam.IPrincipal`\  *(optional)*
      :param \*actions: The set of actions to allow (i.e. "dynamodb:PutItem", "dynamodb:GetItem", ...)
      :type \*actions: string


   .. py:method:: grantFullAccess([principal])

      Permits all DynamoDB operations ("dynamodb:*") to an IAM principal.



      :param principal: The principal to grant access to
      :type principal: :py:class:`@aws-cdk/aws-iam.IPrincipal`\  *(optional)*


   .. py:method:: grantReadData([principal])

      Permits an IAM principal all data read operations from this table:

      BatchGetItem, GetRecords, GetShardIterator, Query, GetItem, Scan.



      :param principal: The principal to grant access to
      :type principal: :py:class:`@aws-cdk/aws-iam.IPrincipal`\  *(optional)*


   .. py:method:: grantReadWriteData([principal])

      Permits an IAM principal to all data read/write operations to this table.

      BatchGetItem, GetRecords, GetShardIterator, Query, GetItem, Scan,

      BatchWriteItem, PutItem, UpdateItem, DeleteItem



      :param principal: The principal to grant access to
      :type principal: :py:class:`@aws-cdk/aws-iam.IPrincipal`\  *(optional)*


   .. py:method:: grantWriteData([principal])

      Permits an IAM principal all data write operations to this table:

      BatchWriteItem, PutItem, UpdateItem, DeleteItem.



      :param principal: The principal to grant access to
      :type principal: :py:class:`@aws-cdk/aws-iam.IPrincipal`\  *(optional)*


   .. py:method:: validate() -> string[]

      *Overrides* :py:meth:`@aws-cdk/cdk.Construct.validate`

      Validate the table construct.



      *Protected method*

      :return: an array of validation error message
      :rtype: string[]


   .. py:attribute:: tableArn

      :type: string *(readonly)*


   .. py:attribute:: tableName

      :type: string *(readonly)*


   .. py:attribute:: tableStreamArn

      :type: string *(readonly)*


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.prepare>`

      Perform final modifications before synthesis

      

      This method can be implemented by derived constructs in order to perform

      final changes before synthesis. prepare() will be called after child

      constructs have been prepared.

      

      This is an advanced framework feature. Only use this if you

      understand the implications.



      *Protected method*



   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


TableProps (interface)
^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: TableProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.DynamoDB;

      .. code-tab:: java

         import software.amazon.awscdk.services.dynamodb.TableProps;

      .. code-tab:: javascript

         // TableProps is an interface

      .. code-tab:: typescript

         import { TableProps } from '@aws-cdk/aws-dynamodb';





   .. py:attribute:: billingMode

      Specify how you are charged for read and write throughput and how you manage capacity.



      :type: :py:class:`~@aws-cdk/aws-dynamodb.BillingMode`\  *(optional)*
      :default: Provisioned


   .. py:attribute:: partitionKey

      Partition key attribute definition. This is eventually required, but you

      can also use `addPartitionKey` to specify the partition key at a later stage.



      :type: :py:class:`~@aws-cdk/aws-dynamodb.Attribute`\  *(optional)*


   .. py:attribute:: pitrEnabled

      Whether point-in-time recovery is enabled.



      :type: boolean *(optional)*
      :default: undefined, point-in-time recovery is disabled


   .. py:attribute:: readCapacity

      The read capacity for the table. Careful if you add Global Secondary Indexes, as

      those will share the table's provisioned throughput.

      

      Can only be provided if billingMode is Provisioned.



      :type: number *(optional)*
      :default: 5


   .. py:attribute:: sortKey

      Table sort key attribute definition. You can also use `addSortKey` to set

      this up later.



      :type: :py:class:`~@aws-cdk/aws-dynamodb.Attribute`\  *(optional)*


   .. py:attribute:: sseEnabled

      Whether server-side encryption is enabled.



      :type: boolean *(optional)*
      :default: undefined, server-side encryption is disabled


   .. py:attribute:: streamSpecification

      When an item in the table is modified, StreamViewType determines what information

      is written to the stream for this table. Valid values for StreamViewType are:



      :type: :py:class:`~@aws-cdk/aws-dynamodb.StreamViewType`\  *(optional)*
      :default: undefined, streams are disabled


   .. py:attribute:: tableName

      Enforces a particular physical table name.



      :type: string *(optional)*
      :default: <generated>


   .. py:attribute:: tags

      The AWS resource tags to associate with the table.



      :type: string => string *(optional)*
      :default: undefined


   .. py:attribute:: ttlAttributeName

      The name of TTL attribute.



      :type: string *(optional)*
      :default: undefined, TTL is disabled


   .. py:attribute:: writeCapacity

      The write capacity for the table. Careful if you add Global Secondary Indexes, as

      those will share the table's provisioned throughput.

      

      Can only be provided if billingMode is Provisioned.



      :type: number *(optional)*
      :default: 5


UtilizationScalingProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: UtilizationScalingProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.DynamoDB;

      .. code-tab:: java

         import software.amazon.awscdk.services.dynamodb.UtilizationScalingProps;

      .. code-tab:: javascript

         // UtilizationScalingProps is an interface

      .. code-tab:: typescript

         import { UtilizationScalingProps } from '@aws-cdk/aws-dynamodb';



   Properties for enabling DynamoDB utilization tracking



   :extends: :py:class:`@aws-cdk/aws-applicationautoscaling.BaseTargetTrackingProps`\ 


   .. py:attribute:: targetUtilizationPercent

      Target utilization percentage for the attribute



      :type: number


   .. py:attribute:: disableScaleIn

      *Inherited from* :py:attr:`@aws-cdk/aws-applicationautoscaling.BaseTargetTrackingProps <@aws-cdk/aws-applicationautoscaling.BaseTargetTrackingProps.disableScaleIn>`

      Indicates whether scale in by the target tracking policy is disabled.

      

      If the value is true, scale in is disabled and the target tracking policy

      won't remove capacity from the scalable resource. Otherwise, scale in is

      enabled and the target tracking policy can remove capacity from the

      scalable resource.



      :type: boolean *(optional)*
      :default: false


   .. py:attribute:: policyName

      *Inherited from* :py:attr:`@aws-cdk/aws-applicationautoscaling.BaseTargetTrackingProps <@aws-cdk/aws-applicationautoscaling.BaseTargetTrackingProps.policyName>`

      A name for the scaling policy



      :type: string *(optional)*
      :default: Automatically generated name


   .. py:attribute:: scaleInCooldownSec

      *Inherited from* :py:attr:`@aws-cdk/aws-applicationautoscaling.BaseTargetTrackingProps <@aws-cdk/aws-applicationautoscaling.BaseTargetTrackingProps.scaleInCooldownSec>`

      Period after a scale in activity completes before another scale in activity can start.



      :type: number *(optional)*
      :default: No scale in cooldown


   .. py:attribute:: scaleOutCooldownSec

      *Inherited from* :py:attr:`@aws-cdk/aws-applicationautoscaling.BaseTargetTrackingProps <@aws-cdk/aws-applicationautoscaling.BaseTargetTrackingProps.scaleOutCooldownSec>`

      Period after a scale out activity completes before another scale out activity can start.



      :type: number *(optional)*
      :default: No scale out cooldown


